# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: linter-check.yml
gendiff/: __init__.py  diff_builder.py  generator.py  parser.py  tree_constants.py
gendiff/formatters/: __init__.py  format_json.py  format_plain.py  format_stylish.py
gendiff/scripts/: gendiff.py
tests/: expected.py  test_gendiff.py  test_generator.py
tests/fixtures/: flat_after.yml  flat_before.yml  flat_result  nested_after.yml  nested_before.json  nested_before.yml
