[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Differencies generator"
authors = ["Nazar Annakhalov <nazar.annahalov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
