[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Differencies generator"
authors = ["Nazar Annakhalov <nazar.annahalov@yandex.ru>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
